галерея для мобил

--- a/public/scanner.html
+++ b/public/scanner.html
@@ -25,8 +25,8 @@
         <button id="startScan" class="btn primary">Включить камеру</button>
         <button id="stopScan" class="btn outline">Выключить</button>
         <label class="btn outline">
-          <input id="pickImage" type="file" accept="image/*,.heic,.HEIC" capture="environment" hidden>
-          Фото с кодом
+          <input id="pickImage" type="file" accept="image/*,.heic,.HEIC" hidden>
+          Фото/галерея
         </label>
       </div>
       <p id="status" class="status"></p>
